test/errors/types/tuple_assignment_mismatch_fail.hy
int main()
{
    (int, string) left = (1, "hi")
    (int, int) right = (2, 3)
    left = right
    return 0
}
